dashboards/yoma-fleet/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana-dash
  namespace: dashboard-yoma-fleet
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana-dash
  template:
    metadata:
      labels:
        app: grafana-dash
    spec:
      securityContext:
        fsGroup: 472
      containers:
      - name: grafana-dash
        image: harbor.do.accuknox.com/branded-grafana/grafana:feb-22
        ports:
          - containerPort: 3000
        volumeMounts:
          - name: grafana-storage
            mountPath: /var/lib/grafana
      volumes:
        - name: grafana-storage
          persistentVolumeClaim:
            claimName: grafana-sqlite-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: grafana-dash
  namespace: dashboard-yoma-fleet
spec:
  ports:
    - port: 3000
      targetPort: 3000
  selector:
    app: grafana-dash
